# sysbinder

./: .gitignore  evaluate.py  main.py  pyproject.toml  sysbinder.py  topology.py  train.py  train.sbatch
logs/2026-05-21T07:52:39.486828/: events.out.tfevents.1779342759.omarchy.17701.0
logs/2026-05-21T07:54:12.854813/: events.out.tfevents.1779342852.omarchy.19695.0
logs/2026-05-21T07:54:49.188447/: events.out.tfevents.1779342889.omarchy.20429.0
logs/2026-05-21T07:55:34.832101/: events.out.tfevents.1779342934.omarchy.21350.0
logs/2026-05-21T07:56:02.610331/: events.out.tfevents.1779342962.omarchy.22019.0
topology_figures/: topology_cache.pkl
topology_figures_embedded/: topology_cache.pkl
topology_figures_slots/: topology_cache.pkl
