[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[project]
name = "sysbinder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "wandb>=0.19.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0"
]
